<?xml version="1.0"?>
<package>
  <name>rms_msgs</name>
  <version>2.2.0</version>
  <description>The rms_msgs package. Common messages and services used by some rms.</description>

  <maintainer email="jmnavarrete@robotnik.es">Juan Manuel N.C</maintainer>


  <license>BSD</license>

  <author email="jmnavarrete@robotnik.es">Juan Manuel N.C</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
